# ananke

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: default.yaml
src/sol_moe_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/solmoe/: AGENTS.md  __init__.py  cli.py
src/solmoe/backtest/: __init__.py  vectorized.py
src/solmoe/calibration/: __init__.py  conformal.py
src/solmoe/config/: __init__.py  signal_schema.py
src/solmoe/datasets/: offline.py
src/solmoe/entrypoints/: __init__.py  backtest_vector.py  build_features.py  build_offline.py  evaluate_walkforward.py  ingest_derivs.py  ingest_onchain.py  ingest_spot.py  monitor_live.py  run_inference.py  run_ope.py  simulate_lob.py  train_experts.py  train_gate_awac.py  train_gate_bandit.py  train_mixture_critic.py  tune_baseline.py  tune_ensemble.py
src/solmoe/events/: __init__.py  calendar.py
src/solmoe/execution/: router.py
src/solmoe/features/: __init__.py  pipeline.py
src/solmoe/governance/: __init__.py  vault.py
src/solmoe/ingest/: __init__.py  coinbase.py  derivs.py  onchain.py
src/solmoe/memory/: __init__.py  retrieval.py
src/solmoe/models/: __init__.py  encoder_kronos.py  gating.py  grl.py
src/solmoe/monitoring/: __init__.py  shift.py
src/solmoe/ope/: __init__.py  fqe.py  wis_dr.py
src/solmoe/risk/: __init__.py  sizing.py  slippage.py
src/solmoe/rl/: __init__.py  awac_gate.py  cql_mixture.py  iql_expert.py
tests/: conftest.py  test_blend_and_conformal.py  test_lob_fill.py  test_reward.py  test_slippage_and_sizing.py
(+4 files in other folders)
